--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,12 @@
     margin: 0;
 }
 
-html {
+html, 
+body {
+    min-height: 100%;
     height: 100vh;
 }
+
 body {
     margin: 0;
     padding: 0;
@@ -132,8 +135,7 @@ dialog {
 
 .content {
     background-color: #fdf0d5;
-    /* height: calc(100% - 100px); */
-    /* height: 100vh; */
+    height: 100vh;
 }
 
 .content > h3,
